--- a/index.html
+++ b/index.html
@@ -228,6 +228,20 @@
     .rules li, .tutorial li {
       font-size: 20px;
       margin: 10px 0;
+      color: #fff;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
+    }
+    .retro-pixel .rules li, .retro-pixel .tutorial li {
+      color: #ff0;
+      text-shadow: 2px 2px #f00;
+    }
+    .futuristic .rules li, .futuristic .tutorial li {
+      color: #00d4ff;
+      text-shadow: 0 0 10px #00d4ff;
+    }
+    .cyberpunk .rules li, .cyberpunk .tutorial li {
+      color: #00ffea;
+      text-shadow: 0 0 10px #ff007a;
     }
     .back-button {
       padding: 10px 20px;
@@ -300,11 +314,12 @@
       font-size: 40px;
       color: #333;
       cursor: pointer;
-      transition: transform 0.2s, background 0.3s, border-color 0.3s;
+      transition: transform 0.2s, background 0.3s, border-color 0.3s, box-shadow 0.3s;
     }
     .box:hover {
       background: rgba(255, 255, 255, 1);
-      transform: scale(1.05);
+      transform: scale(1.1);
+      box-shadow: 0 0 15px rgba(30, 144, 255, 0.7);
     }
     .box:focus {
       outline: 3px solid #1e90ff;
@@ -322,7 +337,8 @@
     .retro-pixel .box:hover {
       background: #ff0;
       color: #f00;
-      box-shadow: 2px 2px #f00;
+      box-shadow: 2px 2px #f00, 0 0 10px #ff0;
+      transform: scale(1.1);
     }
     .futuristic .box {
       background: transparent;
@@ -333,7 +349,8 @@
     .futuristic .box:hover {
       background: #00d4ff;
       color: #1a1a3d;
-      box-shadow: 0 0 10px #00d4ff;
+      box-shadow: 0 0 20px #00d4ff;
+      transform: scale(1.1);
     }
     .cyberpunk .box {
       background: #1a1a3d;
@@ -343,7 +360,8 @@
     }
     .cyberpunk .box:hover {
       background: #2a2a5d;
-      box-shadow: 0 0 10px #00ffea;
+      box-shadow: 0 0 20px #00ffea;
+      transform: scale(1.1);
     }
     .box.random-color-1 { border-color: #ff5555; box-shadow: 0 0 10px #ff5555; }
     .box.random-color-2 { border-color: #55ff55; box-shadow: 0 0 10px #55ff55; }
@@ -883,6 +901,7 @@
         box.textContent = '';
         box.disabled = false;
         box.classList.remove('active', 'random-color-1', 'random-color-2', 'random-color-3');
+        box.classList.remove('hover-highlight');
       });
       updateScoreDisplay();
       updateAchievementsDisplay();
@@ -896,6 +915,8 @@
         box.addEventListener('keypress', (e) => {
           if (e.key === 'Enter' || e.key === ' ') handleSinglePlayerMove.call(box, e);
         });
+        box.addEventListener('mouseover', highlightBox);
+        box.addEventListener('mouseout', unhighlightBox);
       });
     }
 
@@ -906,6 +927,8 @@
         box.addEventListener('keypress', (e) => {
           if (e.key === 'Enter' || e.key === ' ') handleMultiplayerMove.call(box, e);
         });
+        box.addEventListener('mouseover', highlightBox);
+        box.addEventListener('mouseout', unhighlightBox);
       });
     }
 
@@ -1111,6 +1134,16 @@
       }, 1000);
     }
 
+    function highlightBox() {
+      if (!this.disabled && !board[parseInt(this.getAttribute('data-index'))]) {
+        this.classList.add('hover-highlight');
+      }
+    }
+
+    function unhighlightBox() {
+      this.classList.remove('hover-highlight');
+    }
+
     function handleSinglePlayerMove() {
       const index = parseInt(this.getAttribute('data-index'));
       if (board[index] || checkWinner()) return;
@@ -1312,7 +1345,12 @@
     }
 
     function disableBoard() {
-      boxes.forEach(box => box.disabled = true);
+      boxes.forEach(box => {
+        box.disabled = true;
+        box.classList.remove('hover-highlight');
+        box.removeEventListener('mouseover', highlightBox);
+        box.removeEventListener('mouseout', unhighlightBox);
+      });
       clearInterval(timerInterval);
     }
   </script>
